fix: icons, labels and checkboxes vertical align

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -406,6 +406,7 @@ input[type="search"]::-webkit-search-cancel-button {
         width: 45px;
         max-width: 45px;
         text-align: center;
+        line-height: 0;
 
         img {
             @extend .rounded;
@@ -417,6 +418,7 @@ input[type="search"]::-webkit-search-cancel-button {
     td.table-list-checkbox {
         width: 35px;
         max-width: 35px;
+        line-height: 0;
     }
 
     td.table-list-strike {
@@ -738,6 +740,11 @@ app-user-billing {
     &:not(.mt-2) {
         @extend .mt-3;
     }
+}
+
+.form-check-label {
+    margin: 0.3rem 0 0 0.3rem;
+    line-height: 16px;
 }
 
 .form-inline {
